--- a/random_images.html
+++ b/random_images.html
@@ -11,6 +11,8 @@
       <div><img id="image2"></div>
       <div><img id="image3"></div>
     </div>
+    <table id="voteTotal">
+    </table>
     <script type="text/javascript" src="random_images.js"></script>
   </body>
 </html>
