--- a/random_images.html
+++ b/random_images.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <style>
-    #image-container {display: flex; justify-content: center;}
-    img {width: 200px;}
-  </style>
+  <link href="random_images.css" type="text/css" rel="stylesheet" />
   <body>
+	<table id="voteTotal" align="center">
+    </table>
+	<h2>Welcome to the BUS MALL</h2>
+	<h3>Click on the image you like. After 15 selections, your total will be displayed</h3>
     <div id="image-container">
       <div><img id="image1"></div>
       <div><img id="image2"></div>
       <div><img id="image3"></div>
     </div>
+	<div id="votesContainer">
+	    <h3 id="progress"></h3>
+	</div>
     <script type="text/javascript" src="random_images.js"></script>
   </body>
 </html>
