--- a/random_images.html
+++ b/random_images.html
@@ -11,9 +11,11 @@
       <div><img id="image2"></div>
       <div><img id="image3"></div>
     </div>
-	<div id="votesContainer">
+    <div id="chart-container"></div>
 	    <h3 id="progress"></h3>
 	</div>
     <script type="text/javascript" src="random_images.js"></script>
+    <script type="text/javascript" src="canvasjs.min.js"></script>
+    <script type="text/javascript" src="votechart.js"></script>
   </body>
 </html>
