--- a/random_images.html
+++ b/random_images.html
@@ -5,7 +5,7 @@
 	<table id="voteTotal" align="center">
     </table>
 	<h2>Welcome to the BUS MALL</h2>
-	<h3>Click on the image you like. After 15 selections, your total will be displayed</h3>
+	<h3>Click on the image you like. After 15 selections, click on "Show Totals" button to display totals</h3>
     <div id="image-container">
       <div><img id="image1"></div>
       <div><img id="image2"></div>
@@ -14,6 +14,9 @@
 	<div id="votesContainer">
 	    <h3 id="progress"></h3>
 	</div>
+	<p id="buttonContainer">
+		<button type="button" onclick="showTable()">Show Totals</button>
+	</p>
     <script type="text/javascript" src="random_images.js"></script>
   </body>
 </html>
