--- a/random_images.html
+++ b/random_images.html
@@ -5,18 +5,17 @@
 	<table id="voteTotal" align="center">
     </table>
 	<h2>Welcome to the BUS MALL</h2>
-	<h3>Click on the product you like. After 15 selections, click on the "Show Totals" button, that will appear, to display total selections.</h3>
+	<h3>Click on the image you like. After 15 selections, your total will be displayed</h3>
     <div id="image-container">
       <div><img id="image1"></div>
       <div><img id="image2"></div>
       <div><img id="image3"></div>
     </div>
-	<div id="votesContainer">
+    <div id="chart-container"></div>
 	    <h3 id="progress"></h3>
 	</div>
-	<p id="buttonContainer">
-		<button type="button" onclick="showTable()">Show Totals</button>
-	</p>
     <script type="text/javascript" src="random_images.js"></script>
+    <script type="text/javascript" src="canvasjs.min.js"></script>
+    <script type="text/javascript" src="votechart.js"></script>
   </body>
 </html>
