--- a/random_images.html
+++ b/random_images.html
@@ -5,7 +5,7 @@
 	<table id="voteTotal" align="center">
     </table>
 	<h2>Welcome to the BUS MALL</h2>
-	<h3>Click on the image you like. After 15 selections, your total will be displayed</h3>
+	<h3>Click on the image you like. After 15 selections, your total will be displayed in a chart.</h3>
     <div id="image-container">
       <div><img id="image1"></div>
       <div><img id="image2"></div>
